model graph updates

--- a/examples/results.ipynb
+++ b/examples/results.ipynb
@@ -92,11 +92,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fname = \"../extraction/data/coastal/screening_100_2.csv\"\n",
+    "fname = \"../extraction/data/coastal/screening_100_3.csv\"\n",
     "df = pd.read_csv(fname, index_col=0, encoding=\"utf-8\")\n",
     "\n",
     "def normalize_quotes(text):\n",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -128,15 +128,15 @@
        "10.1002/lno.11731    45\n",
        "10.1002/lno.11773    44\n",
        "                     ..\n",
+       "10.1002/lno.11878     1\n",
        "10.1002/lno.11271     1\n",
        "10.1002/lno.12758     1\n",
        "10.1002/lno.12179     1\n",
-       "10.1002/lno.12415     1\n",
        "10.1002/lno.12780     1\n",
        "Name: count, Length: 100, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,18 +147,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of relevant papers: 33\n",
-      "Number of papers with a definition: 8\n",
-      "Number of papers with a table: 32\n",
-      "Number of papers with a measurement: 10\n",
-      "Number of papers with a definition or a measurement: 14\n"
+      "Number of relevant papers: 27\n",
+      "Number of papers with a definition: 13\n",
+      "Number of papers with a table: 26\n",
+      "Number of papers with a measurement: 6\n",
+      "Number of papers with a definition or a measurement: 15\n"
      ]
     }
    ],
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -334,11 +334,11 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>41</th>\n",
+       "      <th>43</th>\n",
        "      <td>10.1002/lno.11678</td>\n",
-       "      <td>10</td>\n",
+       "      <td>12</td>\n",
        "      <td>True</td>\n",
-       "      <td>## Sensitivity analysis and single model ensem...</td>\n",
+       "      <td>Sensitivity to average tracer concentrations i...</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
@@ -356,18 +356,29 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1232</th>\n",
-       "      <td>10.1002/lno.12471</td>\n",
-       "      <td>12</td>\n",
+       "      <th>1046</th>\n",
+       "      <td>10.1002/lno.12241</td>\n",
+       "      <td>19</td>\n",
        "      <td>True</td>\n",
-       "      <td>pCO 2 and water-atmosphere CO 2 fluxes variabi...</td>\n",
+       "      <td>Area Site name Latitude ( N) Longitude ( E) Ag...</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1233</th>\n",
+       "      <th>1052</th>\n",
+       "      <td>10.1002/lno.12241</td>\n",
+       "      <td>25</td>\n",
+       "      <td>True</td>\n",
+       "      <td>To address local-scale variation in mangrove s...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1076</th>\n",
        "      <td>10.1002/lno.12471</td>\n",
        "      <td>13</td>\n",
        "      <td>True</td>\n",
@@ -378,7 +389,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1235</th>\n",
+       "      <th>1078</th>\n",
        "      <td>10.1002/lno.12471</td>\n",
        "      <td>15</td>\n",
        "      <td>True</td>\n",
@@ -389,22 +400,11 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1236</th>\n",
+       "      <th>1079</th>\n",
        "      <td>10.1002/lno.12471</td>\n",
        "      <td>16</td>\n",
        "      <td>True</td>\n",
        "      <td>## Wind speed\\nAverage 4.06 622 462 218 5.4 11...</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>The context studies three coastal ecosystems:\\...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1239</th>\n",
-       "      <td>10.1002/lno.12471</td>\n",
-       "      <td>19</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Some stations, mainly in the dry season, prese...</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
@@ -412,7 +412,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>255 rows × 8 columns</p>\n",
+       "<p>155 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -421,57 +421,44 @@
        "38    10.1002/lno.11678      7           True   \n",
        "39    10.1002/lno.11678      8           True   \n",
        "40    10.1002/lno.11678      9           True   \n",
-       "41    10.1002/lno.11678     10           True   \n",
+       "43    10.1002/lno.11678     12           True   \n",
        "...                 ...    ...            ...   \n",
-       "1232  10.1002/lno.12471     12           True   \n",
-       "1233  10.1002/lno.12471     13           True   \n",
-       "1235  10.1002/lno.12471     15           True   \n",
-       "1236  10.1002/lno.12471     16           True   \n",
-       "1239  10.1002/lno.12471     19           True   \n",
+       "1046  10.1002/lno.12241     19           True   \n",
+       "1052  10.1002/lno.12241     25           True   \n",
+       "1076  10.1002/lno.12471     13           True   \n",
+       "1078  10.1002/lno.12471     15           True   \n",
+       "1079  10.1002/lno.12471     16           True   \n",
        "\n",
        "                                                   text definition_bool  \\\n",
        "14    ## In situ data\\nAksnes and Ohman (2009) assem...           False   \n",
        "38    ## Radon and radium data\\nMost of the radon an...           False   \n",
        "39    ## Initial estimation of mass balance fluxes\\n...           False   \n",
        "40    To estimate the weighted average 222 Rn and 22...           False   \n",
-       "41    ## Sensitivity analysis and single model ensem...           False   \n",
+       "43    Sensitivity to average tracer concentrations i...           False   \n",
        "...                                                 ...             ...   \n",
-       "1232  pCO 2 and water-atmosphere CO 2 fluxes variabi...           False   \n",
-       "1233  Due to no consensus of the best k-wind speed p...           False   \n",
-       "1235  ## Discussion\\n## Spatial-temporal variability...           False   \n",
-       "1236  ## Wind speed\\nAverage 4.06 622 462 218 5.4 11...            True   \n",
-       "1239  Some stations, mainly in the dry season, prese...           False   \n",
+       "1046  Area Site name Latitude ( N) Longitude ( E) Ag...           False   \n",
+       "1052  To address local-scale variation in mangrove s...           False   \n",
+       "1076  Due to no consensus of the best k-wind speed p...           False   \n",
+       "1078  ## Discussion\\n## Spatial-temporal variability...           False   \n",
+       "1079  ## Wind speed\\nAverage 4.06 622 462 218 5.4 11...           False   \n",
        "\n",
-       "     table_bool measurement_bool  \\\n",
-       "14         True            False   \n",
-       "38         True            False   \n",
-       "39         True            False   \n",
-       "40         True            False   \n",
-       "41         True            False   \n",
-       "...         ...              ...   \n",
-       "1232       True            False   \n",
-       "1233       True            False   \n",
-       "1235       True            False   \n",
-       "1236       True            False   \n",
-       "1239       True            False   \n",
+       "     table_bool measurement_bool definition  \n",
+       "14         True            False        NaN  \n",
+       "38         True            False        NaN  \n",
+       "39         True            False        NaN  \n",
+       "40         True            False        NaN  \n",
+       "43         True            False        NaN  \n",
+       "...         ...              ...        ...  \n",
+       "1046       True             True        NaN  \n",
+       "1052       True             True        NaN  \n",
+       "1076       True            False        NaN  \n",
+       "1078       True            False        NaN  \n",
+       "1079       True            False        NaN  \n",
        "\n",
-       "                                             definition  \n",
-       "14                                                  NaN  \n",
-       "38                                                  NaN  \n",
-       "39                                                  NaN  \n",
-       "40                                                  NaN  \n",
-       "41                                                  NaN  \n",
-       "...                                                 ...  \n",
-       "1232                                                NaN  \n",
-       "1233                                                NaN  \n",
-       "1235                                                NaN  \n",
-       "1236  The context studies three coastal ecosystems:\\...  \n",
-       "1239                                                NaN  \n",
-       "\n",
-       "[255 rows x 8 columns]"
+       "[155 rows x 8 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
